minor attempts at fixing page jump in subpage load

--- a/new/components/ui/page/page.css
+++ b/new/components/ui/page/page.css
@@ -1,3 +1,21 @@
-.page{
-    margin-top:50px;
+.page {
+  margin-top: 50px;
+
+  & .subpage {
+    opacity: 1;
+  }
+
+  & .spinner {
+    display: none;
+  }
+
+  &.loading {
+    & .subpage {
+      opacity: 0;
+    }
+
+    & .spinner {
+      display: block;
+    }
+  }
 }
